<resources>
    <string name="app_name">Currency Converter</string>
    <string name="enter_amount_in_dollar">Enter amount in dollar</string>
    <string name="switch_currency">Switch Currency</string>
    <string name="convert">Convert</string>
    <string name="converted">Converted:</string>
    <string name="converted_value">Converted Value</string>
    <string name="random_image">random image</string>
</resources>
